--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "sass --watch --no-source-map --style compressed .\\public\\css\\main.scss:.\\public\\css\\main.css"
   },
   "eslintConfig": {
     "extends": [
