--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "swiper": "^11.1.12",
     "three": "^0.168.0",
+    "three-nebula": "^10.0.3",
     "three-stdlib": "^2.32.2",
     "web-vitals": "^2.1.4"
   },
