--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": "^10.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.12",
     "three": "^0.168.0",
